# Awesome-Little-Red-Dots

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-webpage.yml  update_bibliography.yml
AIBot/: README.md  analyze_ranking.py  gemini_client.py  lrd_ranking_criteria.json  paper_ranker.py  ranking_report.json  visualize_ranking.py  volcengine_client.py
AIBot/data/: kick_off_ranking_criteria.json
AIBot/results/: kick_off_ranking_report.json  notebooklm_paper_list.txt  ranking_report.json
AIBot/scripts/: gemini_client.py  generate_notebooklm_list.py  kick_off_ranker.py  paper_ranker.py  volcengine_client.py
webpage/: .gitignore  Gemfile  README  README.md  _config.yml  index.md
webpage/_data/: journal_mappings.yml  lrd_tags.yml
webpage/_includes/: bib_search.liquid  tag_list.html
webpage/_layouts/: bib.liquid  bibtex.html  default.html  proposal.liquid
webpage/assets/css/: main.css
webpage/assets/data/: LRD Literature Tags.yml
webpage/assets/js/: bib-interactions.js  bibsearch.js  floating-search.js  publication-chart.js  tag-filter.js
webpage/docs/: tag-system.md
webpage/kick_off/: index.md
webpage/proposals/: index.md
webpage/scripts/: README.md  update_tags.rb
